Fixed Sidebar on mobile view

--- a/src/stylesheets/components/Sidebar.scss
+++ b/src/stylesheets/components/Sidebar.scss
@@ -1,5 +1,15 @@
 @import '_colors.module.scss';
 
+.Sidebar {
+  width: auto;
+  margin: 12px;
+  position: absolute;
+  bottom: 165px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+
 .list {
   list-style-type: none;
 }
@@ -25,14 +35,6 @@
   margin: 3px;
 }
 
-.sidebar {
-  // width: auto;
-  // margin: 12px;
-  // // position: absolute;
-  // bottom: 165px;
-  // height: fit-content;
-}
-
 .selected {
   text-shadow: 1px 1px 2px $pale-pink,
     0 0 25px $linen,
@@ -40,21 +42,13 @@
 }
 
 @media (max-width: 1000px) {
-  .sidebar {
-    // position: absolute;
-    // top: 0px;
-    // left: 0px;
-    width: 100%;
-    padding-bottom: 20px;
+  .Sidebar {
+    top: 0px;
   }
 
   .Sidebar .list {
     display: flex;
     justify-content: space-between;
-    // position: absolute;
-    // top: 0px;
-    // left: 5%;
-    // width: 50%;
     padding-bottom: 20px;
     font-size: 1.7em;
   }
